<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_completed">Tutorial Completed</string>
    <string name="tutorial_0_bottom">You can start by %1$s at any random square.</string>
    <string name="tutorial_1_top">The numbers indicates how many mines are adjacent to the highlighted square.</string>
    <string name="tutorial_1_bottom">Therefore, if the corner 1️⃣  has only one adjacent square, it must be a mine. %1$s to flag it.</string>
    <string name="tutorial_2_top">The next unopened square doesn\'t have a mine because the number is 1️⃣ , not 2️⃣ .</string>
    <string name="tutorial_2_bottom">You can open it by %1$s.</string>
    <string name="tutorial_3_top">The same happens on this 1️⃣ . You know where its adjacent mine is.</string>
    <string name="tutorial_3_bottom">You can open all other unopened squares adjacent to 1️⃣ .</string>
    <string name="tutorial_4_top">We know where one of the mines are. So, there\'s only one possibility to the other one.</string>
    <string name="tutorial_4_bottom">%1$s to flag the mine adjacent to 2️⃣ .</string>
    <string name="tutorial_5_top">Check the highlighted number.</string>
    <string name="tutorial_5_bottom">%1$s to open or %2$s to mark.</string>
    <string name="games">Games</string>
    <string name="previous_games">Previous Games</string>
    <string name="minefield">Difficulty</string>
    <string name="standard">Standard</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="support_description">With your help, we\'ll be able to implement new features and keep our project active.</string>
    <string name="open">Open</string>
    <string name="settings">Settings</string>
    <string name="animations">Animations</string>
    <string name="vibration">Haptic Feedback</string>
    <string name="about">About</string>
    <string name="events">Statistics</string>
    <string name="custom">Custom</string>
    <string name="start">Start</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="mines">Mines</string>
    <string name="retry_sure">If you start a new game, your current progress will be lost.</string>
    <string name="show_licenses">Show Licenses</string>
    <string name="new_game_request">Do you want to start a new game?</string>
    <string name="mines_remaining">%d mines</string>
    <string name="game_time">Game Time</string>
    <string name="mine">Mine</string>
    <string name="settings_general">General</string>
    <string name="settings_gameplay">Gameplay</string>
    <string name="settings_accessibility">Accessibility</string>
    <string name="size">Size</string>
    <string name="rounded_square">Rounded Square</string>
    <string name="system">System</string>
    <string name="rating">Feedback</string>
    <string name="support_title">Support us!</string>
    <string name="support_action">To support</string>
    <string name="rating_message">If you like this game, please give us a feedback. It will help us a lot.</string>
    <string name="used_software_text">This game uses the following third parties software:</string>
    <string name="translators_text">This game was translated by the following people:</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="you_won">You won!</string>
    <string name="victories">Victories</string>
    <string name="you_lost">You lost!</string>
    <string name="you_finished">You have finished!</string>
    <string name="defeats">Defeats</string>
    <string name="game_over_desc_1">Good luck on your next game.</string>
    <string name="game_over_desc_4">You finished the minefield in %1$d seconds.</string>
    <string name="fail_to_share">Failed to share</string>
    <string name="version_s">Version %1$s</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="enable_automatic_flags">Enable automatic placing of flags</string>
    <string name="open_areas">Open Areas</string>
    <string name="total_time">Total Time</string>
    <string name="average_time">Average Time</string>
    <string name="shortest_time">Shortest Time</string>
    <string name="performance">Performance</string>
    <string name="ok">OK</string>
    <string name="use_question_mark">Use Question Mark</string>
    <string name="no_guessing_mode">\'No guessing\' mode</string>
    <string name="control">Controls</string>
    <string name="arrow">➞</string>
    <string name="single_click">Single Click</string>
    <string name="double_click">Double Click</string>
    <string name="long_press">Long Press</string>
    <string name="open_tile">Open</string>
    <string name="flag_tile">Flag</string>
    <string name="retry">Retry</string>
    <string name="continue_game">Continue</string>
    <string name="empty">Empty</string>
    <string name="cant_do_it_now">Impossible to do that now</string>
    <string name="you_have_received">You have received: +%1$d</string>
    <string name="help_win_a_game">For more Help, you must win a game.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="cancel">Cancel</string>
    <string name="resume">Resume</string>
    <string name="yes">Yes</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_all">Unlock All</string>
    <string name="achievements">Achievements</string>
    <string name="no">No</string>
    <string name="general">General</string>
    <string name="source_code">Source Code</string>
    <string name="translation">Translation</string>
    <string name="licenses">Licenses</string>
    <string name="google_play_games">Google Play Games</string>
    <string name="loading">Loading…</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="new_game">New Game</string>
    <string name="share">Share</string>
    <string name="share_menu">Share…</string>
    <string name="no_network">No internet connection.</string>
    <string name="open_menu">Open Menu</string>
    <string name="close_menu">Close Menu</string>
    <string name="delete_all">Delete all</string>
    <string name="themes">Themes</string>
    <string name="try_it">Try It</string>
    <string name="delete_all_message">Delete all events permanently.</string>
    <string name="all_mines_disabled">All mines were disabled.</string>
    <string name="desc_convered_area">Covered area</string>
    <string name="desc_marked_area">Marked area</string>
    <string name="desc_question_area">Doubtful area</string>
    <string name="desc_wrongly_marked_area">Wrongly marked area</string>
    <string name="exploded_mine">Exploded Mine</string>
    <string name="game_started">Game Started</string>
    <string name="you_exploded_a_mine">You exploded a mine!</string>
    <string name="flag_placed">Flag placed!</string>
    <string name="flag_removed">Flag removed!</string>
    <string name="remove_ad">Remove Ads</string>
    <string name="help">Help</string>
    <string name="show_windows">Show windows</string>
    <string name="switch_control">Switch: Flag and Open</string>
    <string name="switch_control_desc">Use button to switch between Flag and Open</string>
    <string name="app_description">You have to clear a rectangular board containing hidden mines without detonating any of them.</string>
    <string name="app_name">Antimine</string>
</resources>
