<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/areaLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/minesLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="96dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/map_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="center_horizontal"
                android:hint="@string/width"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minEms="3"
                android:text="9"
                android:textSize="@dimen/base_font_size"
                tools:ignore="HardcodedText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="x"
            android:textSize="@dimen/base_font_size"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="96dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/map_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="center_horizontal"
                android:hint="@string/height"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minEms="3"
                android:text="9"
                android:textSize="@dimen/base_font_size"
                tools:ignore="HardcodedText" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/minesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/areaLayout">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="96dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/map_mines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="center_horizontal"
                android:hint="@string/mines"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minEms="3"
                android:text="9"
                android:textSize="@dimen/base_font_size"
                tools:ignore="HardcodedText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text=" "
            android:textSize="@dimen/base_font_size"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="96dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/seed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="center_horizontal"
                android:hint="@string/seed"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minEms="3"
                android:text=""
                android:textSize="@dimen/base_font_size"
                tools:ignore="HardcodedText" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
