<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/appearance"
        app:iconSpaceReserved="false">

        <Preference
            android:key="preference_select_theme"
            android:title="@string/themes"
            app:iconSpaceReserved="false" />

        <SeekBarPreference
            android:defaultValue="50"
            android:key="preference_area_size"
            android:max="80"
            android:min="40"
            android:title="@string/size"
            app:adjustable="true"
            app:iconSpaceReserved="false"
            app:min="40"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="3"
            android:key="preference_square_radius"
            android:max="10"
            android:min="0"
            android:title="@string/rounded_square"
            app:adjustable="true"
            app:iconSpaceReserved="false"
            app:min="0"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
