<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <dev.lucasnlm.antimine.common.level.view.CustomRecyclerView
        android:id="@+id/recyclerGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:contentDescription="@null"
        android:descendantFocusability="afterDescendants"
        android:fadeScrollbars="false"
        android:focusable="true"
        android:overScrollMode="never"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical|horizontal">

        <requestFocus />
    </dev.lucasnlm.antimine.common.level.view.CustomRecyclerView>
</FrameLayout>
